// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPageEmbedment rejects if the server returns an error 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": "{"page_external_id":"123456789","position":"TOP"}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/help-centers/1/shopify-page-embedments",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
  "unlink": [],
}
`;

exports[`createPageEmbedment resolves with a created page embedment on success 1`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": "{"page_external_id":"123456789","position":"TOP"}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/help-centers/1/shopify-page-embedments",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
  "unlink": [],
}
`;

exports[`getAIGeneratedArticlesByHelpCenterAndStore rejects if the server returns an error 2`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/help-centers/1/article-templates/ai/2",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`getAIGeneratedArticlesByHelpCenterAndStore resolves with a list of AI articles on success 1`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/help-centers/1/article-templates/ai/2",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`getArticleTemplate rejects if the server returns an error 2`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {
        "locale": "en-US",
      },
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/article-templates/shippingPolicy",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`getArticleTemplate resolves with an article template on success 1`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {
        "locale": "en-US",
      },
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/article-templates/shippingPolicy",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`getArticleTemplates rejects if the server returns an error 2`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {
        "locale": "en-US",
      },
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/article-templates",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`getArticleTemplates resolves with a list of article templates on success 1`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {
        "locale": "en-US",
      },
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/article-templates",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`getPageEmbedments rejects if the server returns an error 2`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/help-centers/1/shopify-page-embedments",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`getPageEmbedments resolves with a list of page embedments on success 1`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/help-centers/1/shopify-page-embedments",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`getShopifyPages rejects if the server returns an error 2`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/help-centers/1/shopify-pages",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`getShopifyPages resolves with a list of shopify pages on success 1`] = `
{
  "delete": [],
  "get": [
    {
      "allowAbsoluteUrls": true,
      "baseURL": "http://acme.gorgias.docker:4001",
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": {},
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/help-center/help-centers/1/shopify-pages",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;
